<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="clear">C</string>
    <string name="allClear">AC</string>
    <string name="dot">.</string>
    <string name="multi">\u00D7</string>
    <string name="div">\u00F7</string>
    <string name="subtract">\u2212</string>
    <string name="plus">\u002B</string>
    <string name="equals">\u003D</string>
    <string name="negative">\u00B1</string>
    <string name="delete">Del</string>


</resources>
