<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000"
    android:shrinkColumns="1,2,3,4"
    android:stretchColumns="1,2,3,4"
    android:weightSum="5">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/num0"
            android:id="@+id/textResult"
            android:layout_span="5"
            android:gravity="right"
            android:textSize="65sp"
            android:textColor="#FFF"
            android:layout_gravity="right"
            android:singleLine="false"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:maxLength="9" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/clear"
            android:id="@+id/btnClear"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#9e9e9e"
            android:singleLine="false"
            android:textSize="40sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/negative"
            android:id="@+id/btnNeg"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#9e9e9e"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/delete"
            android:id="@+id/btnDel"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#9e9e9e"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/div"
            android:id="@+id/btnDiv"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#f57c00"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num7"
            android:id="@+id/btn7"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num8"
            android:id="@+id/btn8"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num9"
            android:id="@+id/btn9"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi"
            android:id="@+id/btnMulti"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#f57c00"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow2"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num4"
            android:id="@+id/btn4"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num5"
            android:id="@+id/btn5"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num6"
            android:id="@+id/btn6"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/subtract"
            android:id="@+id/btnSub"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#f57c00"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow3"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num1"
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num2"
            android:id="@+id/btn2"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num3"
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:layout_span="1"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/plus"
            android:id="@+id/btnPlus"
            android:layout_weight="1"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#f57c00"
            android:textSize="40sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow4"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num0"
            android:id="@+id/btn0"
            android:layout_column="0"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:textSize="40sp"
            android:layout_span="3"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:layout_column="0"
            android:id="@+id/btnDec"
            android:layout_weight="0"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#bdbdbd"
            android:layout_span="0"
            android:textSize="40sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:id="@+id/btnEqual"
            android:layout_column="0"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:minHeight="0dp"
            android:background="#f57c00"
            android:layout_span="0"
            android:textSize="40sp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp" />
    </TableRow>

</TableLayout>